tests/invalid/bug197.err_exp
bug197.m:023: Error: no clauses for predicate `foo'/4.
bug197.m:025: Error: clause for predicate `foo'/3
bug197.m:025:   without corresponding `:- pred' declaration.
bug197.m:025:   However, a predicate of that name does exist with arity 4.
bug197.m:026: In clause for predicate `foo'/3:
bug197.m:026:   in argument 1 of call to predicate `list.foldl'/4:
bug197.m:026:   type error: argument has type
bug197.m:026:     pred(string, T, V_6, V_6);
bug197.m:026:   expected type was
bug197.m:026:     pred(L, A, A).
bug197.m:026:   Arity mismatch for the predicate: expected three arguments, got
bug197.m:026:   four.
bug197.m:032: Error: cannot use !:SS here due to the surrounding lambda
bug197.m:032:   expression; you may only refer to !.SS.
bug197.m:026:   Here is the surrounding context that makes state variable SS
bug197.m:026:   readonly.
bug197.m:032: In clause for predicate `foo'/3:
bug197.m:032:   warning: variable `STATE_VARIABLE_SS_20' occurs only once in
bug197.m:032:   this scope.
For more information, recompile with `-E'.
